--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
             <h1>Here you will find:</h1>
             <div>
                 <h3><strong>Low-effort activity ideas</strong> to suit your mood and budget</h3>
-                <img src="" alt="">
+                <img src="./img/penguin1.svg" alt="Penguin 1">
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/penguin2.svg" alt="Penguin 2">
                 <h3><strong>Fast and clear answers</strong> to most common parentig challengs</h3>
             </div>
             <div>
                 <h3><strong>Cliff-notes</strong> from top-rated parenting books <span>(because who has the time to read the whole thing?)</span></i></h3>
-                <img src="" alt="">
+                <img src="./img/penguin3.svg" alt="Penguin 3">
             </div>
             <div>
-                <img src="" alt="">
+                <img src="./img/penguin4.svg" alt="Penguin 4">
                 <h3><strong>Lonmger reads</strong> for the SuperDads out there</h3>
             </div>
             <div>
