--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dadvice</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div>
@@ -13,19 +16,19 @@
         <div>
             <h1>DADA</h1>
         </div>
-        <div><a href="#">Login</a></div>
+        <div><a id="login" href="#">Login</a></div>
     </header>
     <main>
         <div>
-            <h1>A parenting coach in your pocket</h1>
-            <img src="" alt="">
-            <h1>Most parenting resources are built with moms in mind.</h1>
-            <h2>We've created one for you, Dad!</h2>
-            <h3>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</h3>
-            <a href="#">Get Dadvice</a>
+            <h2>A parenting coach in your pocket</h2>
+            <img src="./img/device%20mockup%201.svg" alt="Phone">
+            <h2>Most parenting resources are built with moms in mind.</h2>
+            <h3>We've created one for you, Dad!</h3>
+            <h4>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</h4>
+            <a class="drkBtn" href="#">Get Dadvice</a>
         </div>
         <div>
-            <h1>Here you will find:</h1>
+            <h2>Here you will find:</h2>
             <div>
                 <h3><strong>Low-effort activity ideas</strong> to suit your mood and budget</h3>
                 <img src="./img/penguin1.svg" alt="Penguin 1">
@@ -35,7 +38,8 @@
                 <h3><strong>Fast and clear answers</strong> to most common parentig challengs</h3>
             </div>
             <div>
-                <h3><strong>Cliff-notes</strong> from top-rated parenting books <span>(because who has the time to read the whole thing?)</span></i></h3>
+                <h3><strong>Cliff-notes</strong> from top-rated parenting books <span>(because who has the time to read
+                        the whole thing?)</span></i></h3>
                 <img src="./img/penguin3.svg" alt="Penguin 3">
             </div>
             <div>
@@ -43,16 +47,21 @@
                 <h3><strong>Lonmger reads</strong> for the SuperDads out there</h3>
             </div>
             <div>
-                <a href="">Sign Up</a>
+                <a class="drkBtn" href="">Sign Up</a>
             </div>
         </div>
     </main>
     <footer>
         <div>
             <a href="#">Contact Us</a>
+        </div>
+        <div>
             <a href="#">Privacy</a>
+        </div>
+        <div>
             <a href="#">Terms</a>
         </div>
     </footer>
 </body>
+
 </html>
