Changed font family

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h4>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</h4>
             <a class="drkBtn" href="#">Get Dadvice</a>
         </div>
-        <div>
+        <div id="penguins">
             <h2>Here you will find:</h2>
             <div>
                 <h3><strong>Low-effort activity ideas</strong> to suit your mood and budget</h3>
@@ -44,11 +44,11 @@
             </div>
             <div>
                 <img src="./img/penguin4.svg" alt="Penguin 4">
-                <h3><strong>Lonmger reads</strong> for the SuperDads out there</h3>
+                <h3><strong>Longer reads</strong> for the SuperDads out there</h3>
             </div>
-            <div>
-                <a class="drkBtn" href="">Sign Up</a>
-            </div>
+        </div>
+        <div>
+            <a class="drkBtn" href="">Sign Up</a>
         </div>
     </main>
     <footer>
