Updated styling for index.html

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
             <img src="./img/device%20mockup%201.svg" alt="Phone">
             <h2>Most parenting resources are built with moms in mind.</h2>
             <h3>We've created one for you, Dad!</h3>
-            <h4>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</h4>
+            <p>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</p>
             <a class="drkBtn" href="#">Get Dadvice</a>
         </div>
         <div id="penguins">
             <h2>Here you will find:</h2>
             <div>
-                <h3><strong>Low-effort activity ideas</strong> to suit your mood and budget</h3>
+                <p><strong>Low-effort activity ideas</strong> to suit your mood and budget</p>
                 <img src="./img/penguin1.svg" alt="Penguin 1">
             </div>
             <div>
                 <img src="./img/penguin2.svg" alt="Penguin 2">
-                <h3><strong>Fast and clear answers</strong> to most common parentig challengs</h3>
+                <p><strong>Fast and clear answers</strong> to most common parentig challengs</p>
             </div>
             <div>
-                <h3><strong>Cliff-notes</strong> from top-rated parenting books <span>(because who has the time to read
-                        the whole thing?)</span></i></h3>
+                <p><strong>Cliff-notes</strong> from top-rated parenting books <span>(because who has the time to read
+                        the whole thing?)</span></i></p>
                 <img src="./img/penguin3.svg" alt="Penguin 3">
             </div>
             <div>
                 <img src="./img/penguin4.svg" alt="Penguin 4">
-                <h3><strong>Longer reads</strong> for the SuperDads out there</h3>
+                <p><strong>Longer reads</strong> for the SuperDads out there</p>
             </div>
         </div>
         <div>
